// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenSelectorModal Component displays empty state when no tokens match search 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                TokenSelectorModal
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      testID="bottom-sheet-mock"
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Select token
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="2"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        contentContainerStyle={
                          {
                            "flexDirection": "row",
                            "gap": 8,
                            "paddingHorizontal": 16,
                          }
                        }
                        handlerTag={8}
                        handlerType="NativeViewGestureHandler"
                        horizontal={true}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        showsHorizontalScrollIndicator={false}
                      >
                        <View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#3c4d9d0f",
                                "borderColor": "transparent",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "flexDirection": "row",
                                "height": 32,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={8}
                              style={[Array]}
                            >
                              <View … />
                              <Text … />
                              <SvgMock … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          }
                        }
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#3c4d9d0f",
                              "borderColor": "#b7bbc866",
                              "borderRadius": 24,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "height": 48,
                              "opacity": 1,
                              "paddingHorizontal": 16,
                            }
                          }
                          testID="textfield"
                        >
                          <View
                            style={
                              {
                                "marginRight": 12,
                              }
                            }
                            testID="textfield-startacccessory"
                          >
                            <SvgMock
                              color="#686e7d"
                              fill="currentColor"
                              height={20}
                              name="Search"
                              style={[Object]}
                              width={20}
                            />
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <TextInput
                              autoFocus={false}
                              editable={true}
                              multiline={false}
                              numberOfLines={1}
                              onBlur={[Function]}
                              onChangeText={[Function]}
                              onFocus={[Function]}
                              placeholder="Search token by name or address"
                              placeholderTextColor="#686e7d"
                              style={[Object]}
                              testID="textfieldsearch"
                              value="Nonexistent Token"
                            />
                          </View>
                          <View
                            style={
                              {
                                "marginLeft": 12,
                              }
                            }
                            testID="textfield-endacccessory"
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <SvgMock … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <RCTScrollView
                        ListEmptyComponent={[Function]}
                        collapsable={false}
                        data={[]}
                        extraData="eip155:1/erc20:0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={9}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        keyboardDismissMode="none"
                        keyboardShouldPersistTaps="always"
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "height": 533.6,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": true,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={false}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "backgroundColor": "#ffffff",
                                "borderRadius": 4,
                                "opacity": 0.5,
                                "position": "relative",
                              }
                            }
                          >
                            <View
                              accessibilityRole="none"
                              accessible={true}
                              style={[Object]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`TokenSelectorModal Component displays network filter selector when pressing "All networks" button 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                TokenSelectorModal
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      testID="bottom-sheet-mock"
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Select network
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="1"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "backgroundColor": "transparent",
                            "borderRadius": 12,
                            "flexDirection": "row",
                            "height": 32,
                            "justifyContent": "center",
                            "opacity": 1,
                            "overflow": "hidden",
                            "paddingHorizontal": 16,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#4459ff",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                        >
                          Deselect all
                        </Text>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        data={
                          [
                            "eip155:1",
                            "bip122:000000000019d6689c085ae165831e93",
                            "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "height": 533.6,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "marginTop": 12,
                            "paddingHorizontal": 16,
                          }
                        }
                      >
                        <View
                          accessibilityRole="button"
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#121314",
                              "borderRadius": 12,
                              "flexDirection": "row",
                              "height": 48,
                              "justifyContent": "center",
                              "opacity": 1,
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#ffffff",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Apply
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`TokenSelectorModal Component renders correctly and matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                TokenSelectorModal
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      testID="bottom-sheet-mock"
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Select token
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="0"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        contentContainerStyle={
                          {
                            "flexDirection": "row",
                            "gap": 8,
                            "paddingHorizontal": 16,
                          }
                        }
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        horizontal={true}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        showsHorizontalScrollIndicator={false}
                      >
                        <View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#3c4d9d0f",
                                "borderColor": "transparent",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "flexDirection": "row",
                                "height": 32,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={8}
                              style={[Array]}
                            >
                              <View … />
                              <Text … />
                              <SvgMock … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          }
                        }
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#3c4d9d0f",
                              "borderColor": "#b7bbc866",
                              "borderRadius": 24,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "height": 48,
                              "opacity": 1,
                              "paddingHorizontal": 16,
                            }
                          }
                          testID="textfield"
                        >
                          <View
                            style={
                              {
                                "marginRight": 12,
                              }
                            }
                            testID="textfield-startacccessory"
                          >
                            <SvgMock
                              color="#686e7d"
                              fill="currentColor"
                              height={20}
                              name="Search"
                              style={[Object]}
                              width={20}
                            />
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <TextInput
                              autoFocus={false}
                              editable={true}
                              multiline={false}
                              numberOfLines={1}
                              onBlur={[Function]}
                              onChangeText={[Function]}
                              onFocus={[Function]}
                              placeholder="Search token by name or address"
                              placeholderTextColor="#686e7d"
                              style={[Object]}
                              testID="textfieldsearch"
                              value=""
                            />
                          </View>
                        </View>
                      </View>
                      <RCTScrollView
                        ListEmptyComponent={[Function]}
                        collapsable={false}
                        data={
                          [
                            {
                              "assetId": "eip155:1/erc20:0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
                              "chainId": "eip155:1",
                              "decimals": 6,
                              "iconUrl": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png",
                              "name": "USD Coin",
                              "symbol": "USDC",
                            },
                            {
                              "assetId": "eip155:1/erc20:0xdAC17F958D2ee523a2206206994597C13D831ec7",
                              "chainId": "eip155:1",
                              "decimals": 6,
                              "iconUrl": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xdAC17F958D2ee523a2206206994597C13D831ec7.png",
                              "name": "Tether USD",
                              "symbol": "USDT",
                              "unsupported": true,
                            },
                            {
                              "assetId": "bip122:000000000019d6689c085ae165831e93/slip44:0",
                              "chainId": "bip122:000000000019d6689c085ae165831e93",
                              "decimals": 8,
                              "iconUrl": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/bip122/000000000019d6689c085ae165831e93/slip44/0.png",
                              "name": "Bitcoin",
                              "symbol": "BTC",
                              "unsupported": true,
                            },
                            {
                              "assetId": "eip155:1/slip44:60",
                              "chainId": "eip155:1",
                              "decimals": 18,
                              "iconUrl": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/slip44/60.png",
                              "name": "Ethereum",
                              "symbol": "ETH",
                            },
                            {
                              "assetId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44:501",
                              "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
                              "decimals": 6,
                              "iconUrl": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/solana/5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44/501.png",
                              "name": "USD Coin",
                              "symbol": "USDC",
                            },
                          ]
                        }
                        extraData="eip155:1/erc20:0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        keyboardDismissMode="none"
                        keyboardShouldPersistTaps="always"
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "height": 533.6,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                              testID="token-list-item-eip155:1/erc20:0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                              testID="token-list-item-eip155:1/erc20:0xdAC17F958D2ee523a2206206994597C13D831ec7"
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                              testID="token-list-item-bip122:000000000019d6689c085ae165831e93/slip44:0"
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                              testID="token-list-item-eip155:1/slip44:60"
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                              testID="token-list-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44:501"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
